# Cuda-Programming

./: README.md
Experiments/: CMakeLists.txt  template.cpp
Experiments/Exp01-OpenmpHelloWorld/src/: Makefile  openmp_HelloWorld.cpp
Experiments/Exp02-CudaHelloWorld/src/: CMakeLists.txt  cuda_HelloWorld.cu  cuda_HelloWorld.cuh  main  main.cu
Experiments/Exp03-2dEntropy/: README.md
Experiments/Exp03-2dEntropy/drafts/: Flowchart.drawio
Experiments/Exp03-2dEntropy/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cu
Experiments/Exp03-2dEntropy/src/cuda/: cuda_2dEntropy.cu  cuda_2dEntropy.cuh
Experiments/Exp04-2dEntropy-OpenMP/src/: Makefile  main.cpp
Experiments/Exp04-2dEntropy-OpenMP/src/OpenMP/: OpenMP_2dEntropy.cpp  OpenMP_2dEntropy.h
Experiments/Exp04-2dEntropy-OpenMP/src/utils/: samples.cpp  utils.h
Experiments/Exp05-k-dClosestPoints/doc/: README.md  report.md
Experiments/Exp05-k-dClosestPoints/drafts/KdTree/src/: core.cu  core.h  results.csv
Experiments/Exp05-k-dClosestPoints/drafts/baseline(sequential)/src/: CMakeLists.txt  core.cu  core.h
Experiments/Exp05-k-dClosestPoints/drafts/combinedParallel/src/: core.cu  core.h  main.cu
Experiments/Exp05-k-dClosestPoints/drafts/dynamicParallel/src/: CMakeLists.txt  core.cu  results.csv
Experiments/Exp05-k-dClosestPoints/drafts/referenceParallel/src/: core.cu
Experiments/Exp05-k-dClosestPoints/drafts/searchParallel/src/: core.cu
Experiments/Exp05-k-dClosestPoints/src/: CMakeLists.txt  core.cu  core.h  main.cu  test
